<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/content_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_icon_primary" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/dialog_title"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/appIcon"
            app:layout_constraintTop_toTopOf="@+id/appIcon"
            tools:text="Name" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/dialog_subtitle"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/appIcon"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:text="Package Name" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:labelFor="@id/userView"
            android:text="@string/message_add_package"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/dialog_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle" />

        <TextView
            android:id="@+id/tv_user_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:labelFor="@id/userView"
            android:text="@string/label_login_name"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/dialog_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <AutoCompleteTextView
            android:id="@+id/userView"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:inputType="textEmailAddress"
            android:textColor="@color/dialog_title"
            android:textCursorDrawable="@null"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/tv_user_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_label" />

        <View
            android:id="@+id/view_user_underline"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@color/dialog_title"
            app:layout_constraintLeft_toLeftOf="@+id/userView"
            app:layout_constraintRight_toRightOf="@+id/userView"
            app:layout_constraintTop_toBottomOf="@+id/userView" />

        <TextView
            android:id="@+id/tv_pass_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@id/passView"
            android:text="@string/label_login_pass"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/dialog_title"
            app:layout_constraintLeft_toLeftOf="@+id/view_user_underline"
            app:layout_constraintTop_toBottomOf="@+id/view_user_underline" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_pass_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pass_label"
            app:passwordToggleDrawable="@drawable/ic_show_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/dialog_title" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:minWidth="64dp"
            android:minHeight="32dp"
            android:text="@string/control_add"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passView" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:minWidth="64dp"
            android:minHeight="32dp"
            android:text="@string/control_cancel"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/add"
            app:layout_constraintTop_toBottomOf="@+id/passView" />

        <Button
            android:id="@+id/generate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:minWidth="90dp"
            android:minHeight="32dp"
            android:text="@string/control_generate"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
